--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,13 @@
     margin-top: 3rem;
     margin-left: 2rem;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+    .box{
+        width: auto;
+        height: auto;
+    }
+  }
